[tool.poetry]
name = "social-credit"
version = "0.1.0"
description = ""
authors = ["Olga Lipina <olga.lipina@tedo.ru>"]
readme = "README.md"
packages = [{include = "social_credit"}]

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = "20.3"
SQLAlchemy = "^2.0.27"
db-sqlite3 = "^0.0.1"
pytelegrambotapi = "^4.16.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
